[package]
name = "eco-enlace"
version = "0.1.0"
edition = "2021"
description = "renewable provider contact directory"
readme = "README.md"
repository = "https://github.com/ccnmagnoo/eco-enlace-client"
license = "MIT OR Apache-2.0"
keywords = ["yew", "client","renewable","services","solar"]
categories = ["directory", "services", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
tokio = { version="1",features=["full"]}
